syntax = "proto3";

package pb;



//The Balance service definition.
service Balance {
 rpc GetBalance    (GetBalanceRequest   ) returns (GetBalanceReply   );
 rpc UpdateBalance (UpdateBalanceRequest) returns (UpdateBalanceReply);
}

message GetBalanceRequest {
 string accountID = 1;
}

message GetBalanceReply {
 string amount = 1;
}

message UpdateBalanceRequest {
 string accountID = 1;
 string amount = 2;
}

message UpdateBalanceReply {
 string success = 1;
}